crates/wolf_mem/tests/snapshots/mem_diagnostics__e1010_escape_via_value.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1010]: this value is allocated in region `tmp`, which is freed when the block ends
 --> mem:///main.lu:3:26
  |
3 |     let n = region tmp { Node { value: 3 } }
  |                    --- region `tmp` is created here
  |                          ^^^^^^^^^^^^^^^^^ the block's value would outlive the region
  |                          ----------------- allocated here, into region `tmp`
  |                                            - the region is freed here — everything in it is freed wholesale, as one unit
  |
  = note: to keep the value, allocate it where it must live: build it outside the region block, or
    aim the allocation at a longer-lived region explicitly (`let r = region()` … `in r { …
    }`); widening the region block to cover every use also works. When the block's own value
    is what must outlive it, `copy region { … }` copies that value into the enclosing region
    before the free ([mem.region.copyout]). Two keep-alive alternatives change the ownership
    instead: `freeze` the region (immutable forever) or make the value a `shared` cell
    (reference-counted, never dangles).
